# EternalSunshineOfThePictorialMind

./: Cargo.toml  README.md  rustfmt.toml
image-compress/: Cargo.toml
image-compress/src/: cli.rs  compressor.rs  main.rs  service.rs
image-compressor/: Cargo.toml
image-compressor/src/: image.rs  main.rs
img-compressor/: Cargo.toml
