[package]
name = "EternalSunshineOfThePictorialMind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image-compressor"
path = "src/image-compressor/main.rs"

[dependencies]
image = "0.24.6"
mozjpeg = "0.9.4"
crossbeam-queue = "0.3.8" 